# advent2020

./: README.md  pyproject.toml  setup.cfg
Day_01_Report_Repair/: README.txt  sol.py  test_d1.py
Day_02_Password_Philosophy/: README.txt  sol.py
Day_03_Toboggan_Trajectory/: README.txt  sol.py
Day_04_Passport_Processing/: README.txt  pyd.py  sol.py
Day_05_Binary_Boarding/: README.txt  sol.py
Day_06_Custom_Customs/: README.txt  sol.py
Day_07_Handy_Haversacks/: README.txt  hard_input.txt  sol.py
Day_08_Handheld_Halting/: README.txt  sol.py
Day_09_Encoding_Error/: README.txt  ref.py  sol.py
Day_10_Adapter_Array/: README.txt  ref.py  sol.py
Day_11_Seating_System/: README.txt  sol.py
Day_12_Rain_Risk/: README.txt  com.py  ref.py  sol.py
Day_13_Shuttle_Search/: README.txt  brute.py  sol.py
Day_14_Docking_Data/: README.txt  ref.py  sol.py
Day_15_Rambunctious_Recitation/: README.txt
Day_16_Ticket_Translation/: README.txt  sol.py
Day_17_Conway_Cubes/: README.txt  ref.py  sol.py
Day_18_Operation_Order/: README.txt  patch_ast.py  ref.py  sol.py  test_d18.py
Day_19_Monster_Messages/: README.txt  input_upd.txt  sol.py
Day_20_Jurassic_Jigsaw/: README.txt  sol.py
Day_21_Allergen_Assessment/: README.txt  sol.py
Day_22_Crab_Combat/: README.txt  sol.py
Day_23_Crab_Cups/: README.txt  sol.py  test_d23.py
Day_24_Lobby_Layout/: README.txt  sol.py  test_d24.py
Day_25_Combo_Breaker/: README.txt
d1/: test_sol.py
d10/: ref.py  sol.py
d11/: sol.py
d12/: com.py  ref.py  sol.py
d13/: brute.py  sol.py
d14/: ref.py  sol.py
d15/: ref.py  sol.py
(+25 files in other folders)
