[tool.poetry]
name = "advent_of_code_2020"
version = "0.1.0"
description = ""
authors = ["Timur Kushukov <timqsh@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
more-itertools = "^8.6.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"
mypy = "^0.790"
pytest = "^6.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
